--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ body::before {
     display:block;
     height: 200px;
     width: auto; /* Add this line to maintain aspect ratio */
+    /* box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); */
 }
 
 .social-media {
@@ -56,7 +57,7 @@ body::before {
 }
 
 .social-media img {
-    height: 30px;
+    height: 20px;
     align-items:center;
 }
 
@@ -78,8 +79,12 @@ body::before {
 
 /*Game Modes section*/
 .game-modes {
-    padding: 50px;
+    padding: 0px;
     text-align: center;
+    margin-left:40px;
+    margin-right:40px;
+    margin-top:50px;
+    margin-bottom:50px;
 }
 
 .game-mode-container {
@@ -90,7 +95,7 @@ body::before {
 
 .game-mode {
     position: relative;
-    margin: 20px;
+    margin: 5px;
     width: calc(33.33% - 40px);
 }
 
@@ -128,8 +133,17 @@ body::before {
     font-family: "wigwag-bold", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size:30px;
-    text-shadow: 0px 5px 7px rgba(0, 0, 0, 1);
+    font-size:40px;
+    /* text-shadow: 0px 5px 7px rgba(0, 0, 0, 1); */
+    text-shadow:
+    -3px 0px 5px rgba(0, 0, 0, 0.5),
+    0px -3px 5px rgba(0, 0, 0, 0.5),
+    3px 0px 5px rgba(0, 0, 0, 0.5),
+    0px 3px 5px rgba(0, 0, 0, 0.5);
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
 }
 
 .game-mode-overlay p {
@@ -140,6 +154,10 @@ body::before {
     padding: 20px;
     opacity: 0;
     transition: opacity 0.5s;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
 }
 
 .game-mode:hover .game-mode-overlay h3 {
@@ -162,6 +180,9 @@ h2{
     font-weight: 400;
     font-style: normal;
     font-size:50px;
+    margin-top:0px;
+    padding:0px;
+    margin-bottom:0px;
 }
 
 @media (max-width: 768px) {
@@ -169,7 +190,7 @@ h2{
         height: 100px; /* Reduce logo size for mobile */
     }
     .banner {
-        height: calc(100vh - 30px); /* Adjust banner height for mobile */
+        height: calc(100vh); /* Adjust banner height for mobile */
     }
     .social-media {
         height: 40px; /* Adjust social media footer height for mobile */
@@ -182,7 +203,7 @@ h2{
     }
     .game-mode {
         width: 100%;
-        margin: 20px 0;
+        margin: 5px 0;
     }
     h2{
         font-size:25px;
