--- a/stylesTOS.css
+++ b/stylesTOS.css
@@ -36,6 +36,10 @@ body {
 h1 {
     text-align: center;
     margin-top: 20px;
+    font-family: "wigwag-bold", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size:40px;
 }
 
 h2 {
