--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ body::before {
 
 .game-mode img {
     width: 100%;
-    height: 200px;
+    height: 300px;
     object-fit: cover;
     transition: opacity 0.5s, filter 0.5s;
     border-radius: 15px;
@@ -183,6 +183,93 @@ h2{
     margin-bottom:10px;
 }
 
+/* TOS Link */
+.terms-link {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    color: #fff;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.terms-link:hover {
+    color: #ccc;
+}
+
+/* Navigation at the top of page */
+
+.nav-menu {
+    background-color: #333;
+    color: #fff;
+    padding: 1em;
+    text-align: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1;
+}
+
+.nav-logo {
+    font-size: 1.5em;
+    font-weight: bold;
+    margin-right: 1em;
+}
+
+.nav-links {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+.nav-links li {
+    margin-right: 2em;
+}
+
+.nav-links a {
+    color: #fff;
+    text-decoration: none;
+    transition: color 0.2s ease;
+}
+
+.nav-links a:hover {
+    color: #ccc;
+}
+
+.nav-toggle {
+    display: none;
+    cursor: pointer;
+}
+
+.nav-toggle span {
+    display: block;
+    width: 20px;
+    height: 2px;
+    background-color: #fff;
+    margin-bottom: 5px;
+}
+
+/* Social icons up top */
+.social-icons {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    display: flex;
+}
+
+.social-icons a {
+    margin-right: 10px;
+}
+
+.social-icons img {
+    height: 20px;
+    width: auto;
+}
+
+
 /* Add media queries for mobile */
 
 @media (max-width: 768px) {
@@ -207,5 +294,15 @@ h2{
     }
     h2{
         font-size:25px;
+    }
+
+    .nav-links {
+        display: none;
+    }
+    .nav-toggle {
+        display: block;
+    }
+    .nav-menu {
+        padding: 0.5em;
     }
 }
