--- a/styles.css
+++ b/styles.css
@@ -148,8 +148,8 @@ body::before {
 
 .game-mode-overlay p {
     position: absolute;
-    bottom: 0;
-    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
     width: calc(100% - 40px);
     padding: 20px;
     opacity: 0;
