--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body::before {
     background-position: inherit;
     background-repeat: inherit;
     opacity: 0.1; /* Adjust the opacity as needed */
-    z-index: -1;
+    /*z-index: -1;*/
 }
 
 .banner {
@@ -34,6 +34,8 @@ body::before {
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
     text-align:center;
+    position:relative;
+    z-index:2;
 }
 
 .logo {
@@ -269,6 +271,88 @@ h2{
     width: auto;
 }
 
+/* Punch Things Section */
+
+.punch-things {
+    background-color: rgb(156, 209, 218);
+    background-image: url('Images/PunchThingsBG.png');
+    background-blend-mode:screen;
+    background-size: cover;
+    background-position: center;
+    padding: 50px 0;
+    margin-top:-30px;
+    z-index:0;
+
+}
+
+.punch-things-container {
+    display: flex;
+    justify-content:center;
+    /*align-items: center;*/
+    margin: 30px 60px 0 60px;
+    align-items:stretch;
+    box-shadow: 0px 2.5px 10px rgba(0, 0, 0, 0.25);
+    overflow:hidden;
+    border-radius: 15px;
+}
+
+.punch-things-screenshot {
+    width: 50%;
+    height:auto;
+    margin-right:0;
+    position:relative;
+    gap:0;
+    flex: 1 1 auto;
+    background-image: url('Images/GameScreenshots/LaserProbe.png');
+    border-radius: 15px 0 0 15px;
+    background-size:cover;
+    background-position:center;
+    overflow:hidden;
+}
+
+.punch-things-screenshot video {
+    width: 100%;
+    height: 100%;
+    position:absolute;
+    object-fit: cover; /* Add this line to make the video cover the entire area */
+    overflow:hidden;
+}
+
+.punch-things-screenshot img {
+    width: 100%;
+    height:100%;
+    /*height: 300px;*/
+    /*flex-basis:300px;*/
+    object-fit: cover;
+    border-radius: 15px 0 0 15px;
+}
+
+.punch-things-description {
+    width: 45%;
+    background-color:rgba(255,255,255,0.9);
+    border-radius: 0 15px 15px 0;
+    /*height:500px;*/
+    /* flex-grow:1; */
+    box-sizing:border-box;
+    padding:30px;
+    margin:0;
+    gap:0;
+}
+
+.punch-things-description h2 {
+    font-family: "wigwag-bold", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 40px;
+    margin-top: 0;
+}
+
+.punch-things-description p {
+    font-size: 18px;
+    color: #333;
+
+}
+
 
 /* Add media queries for mobile */
 
@@ -305,4 +389,31 @@ h2{
     .nav-menu {
         padding: 0.5em;
     }
+
+    /*Punch Things Section*/
+
+    .punch-things-container {
+        flex-direction: column;
+    }
+
+    .punch-things-screenshot {
+        width: 100%;
+        margin-bottom: 0px;
+        height:200px;
+        border-radius: 15px 15px 0 0;
+    }
+
+    .punch-things-description {
+        width: 100%;
+        border-radius: 0px 0px 15px 15px;
+    }
+
+    .punch-things-description h2 {
+        font-size: 25px;
+    }
+
+    .punch-things-description p {
+        font-size: 16px;
+    }
+
 }
