--- a/styles.css
+++ b/styles.css
@@ -86,12 +86,15 @@ body::before {
     padding-left:40px;
     padding-right:40px;
     padding-top:50px;
-    padding-bottom:50px;
+    padding-bottom:60px;
     background-color:rgba(255,255,255,0.85);
     background-image:url(images/PunchThingsBG.png);
     background-blend-mode:screen;
     background-position:center;
     background-size:cover;
+    box-shadow: 0px 2.5px 10px rgba(0, 0, 0, 0.25);
+    position:relative;
+    z-index:5;
 }
 
 .game-mode-container {
@@ -401,6 +404,7 @@ h2{
     text-align:center;
     /* margin-right:-125px; */
     margin-right:25px;
+    margin-bottom:70px;
     /* background-color:rgba(255,255,255,0.85);
     box-shadow: 0px 2.5px 10px rgba(0, 0, 0, 0.25);
     border-radius:15px; */
@@ -499,6 +503,9 @@ h2{
         width: 100%;
         margin: 5px 0;
     }
+    .game-modes{
+        padding:40px;
+    }
     h2{
         font-size:25px;
     }
@@ -551,6 +558,9 @@ h2{
         width:150px;
         height:150px;
     }
+    .collect-things-description{
+        margin-bottom:0;
+    }
     .collect-things-description p{
         margin-top:0px;
         margin-bottom:0px;
@@ -566,7 +576,7 @@ h2{
         margin-top:-40px;
         height:auto;
         margin-left:10px;
-        margin-right:10px;
+        margin-right:10px;r
     }
     .leaderboard-container{
         margin-top:0;
