--- a/styles.css
+++ b/styles.css
@@ -576,7 +576,7 @@ h2{
         margin-top:-40px;
         height:auto;
         margin-left:10px;
-        margin-right:10px;r
+        margin-right:10px;
     }
     .leaderboard-container{
         margin-top:0;
